--- a/css/style.css
+++ b/css/style.css
@@ -1025,6 +1025,29 @@ form button:hover::after {
   position: relative;
   transition: 0.3s;
   width: 100%;
+  border-bottom: 1px solid #fff4;
+  padding-bottom: 1rem;
+  overflow: hidden;
+  position: relative;
+}
+@media (min-width: 1024px) {
+  #footer .footer .footer-top .socialMedia-links .socialMedia-item {
+    width: 85%;
+    border: 1px solid #fff4;
+    padding: 0.5rem;
+    border-radius: 0.25rem;
+  }
+  #footer .footer .footer-top .socialMedia-links .socialMedia-item:hover {
+    background: #15191e;
+  }
+}
+#footer .footer .footer-top .socialMedia-links .socialMedia-item .item-title .icon {
+  position: absolute;
+  opacity: 0.3;
+  width: 4rem;
+  right: 1rem;
+  top: 50%;
+  transform: translateY(-50%);
 }
 #footer .footer .footer-top .socialMedia-links .socialMedia-item .bg-i {
   position: absolute;
@@ -1050,8 +1073,9 @@ form button:hover::after {
     right: 10vw;
   }
 }
-#footer .footer .footer-top .socialMedia-links .socialMedia-item p {
+#footer .footer .footer-top .socialMedia-links .socialMedia-item p, #footer .footer .footer-top .socialMedia-links .socialMedia-item h3 {
   font-size: 1.25rem;
+  font-size: clamp(1.125rem, 2.5vw, 1.25rem);
   margin-bottom: 0.5rem;
   text-transform: capitalize;
   color: #f4f4f4;
@@ -1070,6 +1094,7 @@ form button:hover::after {
   transition: 0.25s ease;
   display: flex;
   align-items: center;
+  gap: 0.5rem;
 }
 @media (max-width: 450px) {
   #footer .footer .footer-top .socialMedia-links .socialMedia-item a {
@@ -1093,6 +1118,9 @@ form button:hover::after {
   #footer .footer .footer-top .socialMedia-links .socialMedia-item a i {
     font-size: 1.5rem;
   }
+}
+#footer .footer .footer-top .socialMedia-links .socialMedia-item a .icon {
+  opacity: 0.3;
 }
 #footer .footer .footer-top .socialMedia-links .socialMedia-item a:before, #footer .footer .footer-top .socialMedia-links .socialMedia-item a::after {
   position: absolute;
@@ -1208,19 +1236,33 @@ form button:hover::after {
   opacity: 0.8;
   transition: 0.5s;
 }
+#footer .footer .footer-top .socialMedia-links .socialMedia-item:hover .item-title .title-icon {
+  opacity: 0.8;
+}
 #footer .footer .footer-top .socialMedia-links .socialMedia-item:hover a i {
   opacity: 1;
   transform: scale(1.1);
 }
+#footer .footer .footer-top .socialMedia-links .socialMedia-item:hover a .icon {
+  opacity: 1;
+}
 #footer .footer .footer-top .socialMedia-links .socialMedia-item.io-item .bg-i {
   transform: translateX(5vw);
+}
+#footer .footer .footer-top .socialMedia-links .socialMedia-item.io-item .title-icon {
+  transform: translateY(-50%) translateX(5vw);
   opacity: 0;
+  transition: 1s;
 }
 #footer .footer .footer-top .socialMedia-links .socialMedia-item.active-item .bg-i {
   transform: translateX(0);
   transition-timing-function: ease;
   opacity: 0.2;
   transition: 1s;
+}
+#footer .footer .footer-top .socialMedia-links .socialMedia-item.active-item .title-icon {
+  transform: translateY(-50%);
+  opacity: 0.4;
 }
 #footer .footer .footer-top .socialMedia-links .socialMedia-item.active-item:hover .bg-i {
   opacity: 0.8;
