--- a/css/style.css
+++ b/css/style.css
@@ -2616,11 +2616,6 @@ form button:hover::after {
   position: relative;
   margin-bottom: 10vh;
 }
-@media (min-width: 576px) {
-  .work .work-container .item {
-    padding: 0.5rem;
-  }
-}
 @media (min-width: 768px) {
   .work .work-container .item {
     background: #ffff;
@@ -2650,7 +2645,7 @@ form button:hover::after {
   text-transform: capitalize;
   font-weight: 700;
   font-size: 1.05rem;
-  font-size: clamp(1.05rem, 2vw, 2rem);
+  font-size: clamp(1.025rem, 2vw, 1.25rem);
 }
 .work .work-container .item .item-header .item-meta-data {
   display: flex;
@@ -2868,6 +2863,7 @@ form button:hover::after {
   height: 100%;
 }
 .work .work-container .item .item-content .item-image img {
+  border: 1px solid red;
   width: 100%;
   height: 100%;
   object-fit: cover;
