--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -321,7 +321,7 @@
             .item-content {
                 @include abstracts.lg {
                     width: 50%;
-                    padding: 1rem;
+                    // padding: 1rem;
                 }
                 .item-image {
                     overflow: hidden;
@@ -335,10 +335,10 @@
                         transition: .25s;
                     }
                     @include abstracts.lg {
-                        border-radius: .25rem;
+                        // border-radius: .25rem;
                         img {
-                            border: 1px solid #0002;
-                            border-radius: .25rem;
+                            // border: 1px solid #0002;
+                            // border-radius: .25rem;
                         }
                     }
                 }
