--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -82,7 +82,7 @@
                         font-weight: 500;
                         text-transform: capitalize;
                         line-height: 1em;
-                        font-family: abstracts.$font-title;
+                        // font-family: abstracts.$font-title;
                         letter-spacing: .05rem;
                         margin-bottom: 1rem;
                         padding-bottom: .5rem;
