--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -24,7 +24,7 @@
             span {
                 color: #0007;
                 text-transform: capitalize;
-                font-family: abstracts.$font-title;
+                // font-family: abstracts.$font-title;
             }
             &::after {
                 content: '';
