--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,14 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@400;500&family=Montserrat:wght@200;500;700&display=swap");
+@font-face {
+  font-family: "Content";
+  src: url("/fonts/Montserrat-VariableFont_wght.woff2") format("woff2-variations"), url("/fonts/Montserrat-Regular.woff2") format("woff");
+  font-style: normal;
+  font-weight: 100 1000;
+  font-display: swap;
+}
 html {
   scroll-behavior: smooth;
-  font-family: "Montserrat", sans-serif;
+  font-family: Content, sans-serif;
 }
 
 body {
@@ -728,7 +734,7 @@ form button:hover::after {
   margin-top: 0.5rem;
 }
 .about .col-right .article-container article .about-intro p {
-  font-size: clamp(.98rem, 1.5vw, 1.125rem);
+  font-size: clamp(.975rem, 1.5vw, 1.125rem);
 }
 .about .col-right .article-container article .about-intro p.intro {
   font-weight: 500;
@@ -778,12 +784,12 @@ form button:hover::after {
 .about .col-right .article-container article .article-body .body-item p {
   margin: 0.5rem 0 1rem;
   font-size: 0.95rem;
-  font-size: clamp(.98rem, 1.5vw, 1.125rem);
+  font-size: clamp(.975rem, 1.5vw, 1.125rem);
 }
 .about .col-right .article-container article .article-body .body-item a {
   color: #475462;
   font-size: 0.95rem;
-  font-size: clamp(.98rem, 1.5vw, 1.125rem);
+  font-size: clamp(.975rem, 1.5vw, 1.125rem);
   display: flex;
   align-items: center;
   gap: 0.5rem;
@@ -1066,7 +1072,6 @@ form button:hover::after {
   text-transform: capitalize;
   color: #f4f4f4;
   font-weight: 400;
-  font-family: "Kanit", sans-serif;
 }
 #footer .footer .footer-top .socialMedia-links .socialMedia-item a {
   background: #29323d;
@@ -1380,9 +1385,9 @@ form button:hover::after {
 }
 #nav .logo p {
   color: #f4f4f4;
-  font-family: "Kanit", sans-serif;
-  font-size: 1.125rem;
-  font-size: clamp(1rem, 2vw, 1.125rem);
+  font-size: clamp(.975rem, 1.5vw, 1.125rem);
+  font-size: 0.75rem;
+  font-size: clamp(0.75rem, 2vw, 1rem);
   text-transform: capitalize;
   transition: 0.5s;
 }
@@ -1401,7 +1406,6 @@ form button:hover::after {
   text-transform: capitalize;
   display: block;
   font-weight: 400;
-  font-family: "Montserrat", sans-serif;
 }
 @media (max-width: 820px) {
   #nav .nav-list .links-container {
@@ -1446,7 +1450,6 @@ form button:hover::after {
     display: block;
     font-size: 1rem;
     color: #b3c0cc;
-    font-family: "Kanit", sans-serif;
     text-transform: capitalize;
     transition: 0.5s;
     cursor: default;
@@ -1749,7 +1752,7 @@ form button:hover::after {
 }
 .banner h1 {
   font-size: 1rem;
-  font-size: clamp(.98rem, 1.5vw, 1.125rem);
+  font-size: clamp(.975rem, 1.5vw, 1.125rem);
   font-weight: 300;
   margin-bottom: 0.5rem;
 }
@@ -1976,7 +1979,6 @@ form button:hover::after {
   font-weight: 500;
   text-transform: capitalize;
   line-height: 1em;
-  font-family: "Kanit", sans-serif;
   letter-spacing: 0.05rem;
   margin-bottom: 1rem;
   padding-bottom: 0.5rem;
@@ -2144,7 +2146,7 @@ form button:hover::after {
 }
 .skills-section .skills-content .skills-intro .skills-article p {
   line-height: 1.8;
-  font-size: clamp(.98rem, 1.5vw, 1.125rem);
+  font-size: clamp(.975rem, 1.5vw, 1.125rem);
 }
 .skills-section .skills-content .skills-intro .skills-article p span {
   font-weight: 600;
@@ -2559,7 +2561,6 @@ form button:hover::after {
 .work .work-intro h3 span {
   color: #0007;
   text-transform: capitalize;
-  font-family: "Kanit", sans-serif;
 }
 .work .work-intro h3::after {
   content: "";
