--- a/sass/abstracts/_fonts.scss
+++ b/sass/abstracts/_fonts.scss
@@ -1,10 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;500&family=Montserrat:wght@200;500;700&display=swap');
-// fonts 
-$font-title:  'Kanit', sans-serif;
-$font-content: 'Montserrat', sans-serif;
+// @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;500&family=Montserrat:wght@200;500;700&display=swap');
+// // fonts 
+// $font-title:  'Kanit', sans-serif;
+// $font-content: 'Montserrat', sans-serif;
+
+@font-face {
+    font-family: "Content";
+    src: 
+    url('/fonts/Montserrat-VariableFont_wght.woff2') format('woff2-variations'),
+            url('/fonts/Montserrat-Regular.woff2') format('woff');
+    font-style: normal;
+    font-weight: 100 1000;
+    font-display: swap;
+}
 
 // TEXT SIZES
-$font-clamp-xsm: clamp(.98rem, 1.5vw, 1.125rem);
+$font-clamp-xsm: clamp(.975rem, 1.5vw, 1.125rem);
 $font-clamp-sm: clamp(1rem, 2vw, 1.125rem);
 $font-clamp-md: clamp(1.5rem, 4vw, 2.25rem);
 $font-clamp-lg: clamp(2rem, 5vw, 2.5rem);
