--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -2,7 +2,8 @@
 
 html {
     scroll-behavior: smooth;
-    font-family: abstracts.$font-content;
+    // font-family: abstracts.$font-content;
+    font-family: Content, sans-serif;
 }
 
 body {
