--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -3,7 +3,7 @@
 html {
     scroll-behavior: smooth;
     // font-family: abstracts.$font-content;
-    font-family: Content, sans-serif;
+    font-family: 'Content', sans-serif;
 }
 
 body {
