--- a/sass/abstracts/_fonts.scss
+++ b/sass/abstracts/_fonts.scss
@@ -6,9 +6,7 @@
 @font-face {
     font-family: "Content";
     src: 
-    url('../fonts/Montserrat-VariableFont_wght.woff2') format('woff2'),
-            url('../fonts/Montserrat-Regular.woff2') format('woff');
-    font-style: normal;
+    url('../fonts/Montserrat-VariableFont_wght.woff2') format('woff2-variations');
     font-weight: 100 1000;
     font-display: swap;
 }
