--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @font-face {
   font-family: "Content";
-  src: url("../fonts/Montserrat-VariableFont_wght.woff2") format("woff2-variations");
+  src: url("../fonts/Montserrat-VariableFont_wght.woff2") format("woff2");
   font-weight: 100 1000;
   font-display: swap;
 }
