--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -49,11 +49,11 @@
         }
         p {
             color: abstracts.$text-light;
-            // font-family: abstracts.$font-title;
+            font-weight: 500;
             font-size: 0.95rem;
             font-size: abstracts.$font-clamp-xsm;
             text-transform: capitalize;
-            transition: .5s;
+            transition: 500ms;
 
             span {
                 color: abstracts.$brand;
@@ -378,42 +378,37 @@
 
                 li {
                     position: relative;
-
+                    
                     // PSEUDO UNDERLINE
                     &::before {
                         position: absolute;
                         content: '';
-                        bottom: -.25rem;
+                        bottom: -0.25rem;
                         left: 50%;
                         transform: translateX(-50%);
                         width: 0%;
                         height: 2px;
                         background-color: abstracts.$brand;
-                        transition: .25s ease;
-                    }
-
-                    // UNDERLINE TRANSITION OUT IN LI HOVER
-                    &:hover {
-                        &::before {
-                            width: 50%;
-                            opacity: 1;
-                        }
+                        transition: 250ms ease;
                     }
 
                     a {
-                        font-size: .95rem;
-                        padding: .25rem;
+                        font-size: 0.95rem;
+                        font-size: clamp(0.95rem, 1.125vw, 1rem);
+                        padding: 0.25rem;
                         margin: 0 auto;
                         display: block;
                         letter-spacing: normal;
                         float: left;
                         color: abstracts.$text-light;
-                        transition: .25s;
+                        transition: 250ms;
 
                         // TURN OFF DISPLAY OF DATA-AFTER TEXT ON BIGGER SCREENS THATS VISIBLE IN SIDEBAR LINK HOVER
                         &::after {
                             display: none;
                         }
+
+                        
 
                         &.active {
                             color: abstracts.$brand;
@@ -430,16 +425,16 @@
                         display: none;
                     }
 
-                    // links and icon hover state
+                    // UNDERLINE TRANSITION OUT IN LI HOVER
                     &:hover {
                         a {
-                            transition: .3s ease;
+                            transition: 250ms ease;
                             color: abstracts.$text-light;
                         }
 
-                        i {
-                            transition: .3s;
-                            color: abstracts.$span-gold;
+                        &::before {
+                            width: 50%;
+                            opacity: 1;
                         }
                     }
 
