--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -321,14 +321,21 @@
     @include abstracts.lg {
         grid-template-rows:  1fr auto;
     }
+
+
     .grid-title {
         grid-area: grid-title;
         // border: 1px solid yellow;
+
+        h1 {
+            font-weight: 300;
+        }
+
         h2 {
             font-size: 2.5rem;
             font-size: clamp(1.5rem, 4vw, 2.5rem);
             text-wrap: balance;
-            max-width: 500px;
+            // max-width: 500px;
         }
 
         @include abstracts.lg {
