--- a/css/style.css
+++ b/css/style.css
@@ -1806,7 +1806,11 @@ form button:hover::after {
   grid-area: grid-title;
 }
 .hero-grid .grid-title h1 {
-  font-weight: 300;
+  font-weight: 200;
+  font-size: 0.95rem;
+  font-size: clamp(0.95rem, 1.25vw, 1.025rem);
+  cursor: default;
+  transition: 250ms;
 }
 .hero-grid .grid-title h2 {
   font-size: 2.5rem;
@@ -1817,6 +1821,9 @@ form button:hover::after {
   .hero-grid .grid-title {
     place-self: center left;
   }
+}
+.hero-grid .grid-title:hover h1 {
+  font-weight: 500;
 }
 .hero-grid .grid-image {
   grid-area: grid-image;
