--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -325,23 +325,32 @@
 
     .grid-title {
         grid-area: grid-title;
-        // border: 1px solid yellow;
 
         h1 {
-            font-weight: 300;
+            font-weight: 200;
+            font-size: .95rem;
+            font-size: clamp(0.95rem, 1.25vw, 1.025rem);
+            cursor: default;
+            transition: 250ms;
+            
         }
 
         h2 {
             font-size: 2.5rem;
             font-size: clamp(1.5rem, 4vw, 2.5rem);
             text-wrap: balance;
-            // max-width: 500px;
         }
 
+        // WIDE SCREEN LAYOUT
         @include abstracts.lg {
-            // position: relative;
-            // top: 10vh;
             place-self: center left;
+        }
+
+        // TITLE HOVER
+        &:hover {
+            h1 {
+                font-weight: 500;
+            }
         }
     }
 
