fonts & loader file

--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -55,6 +55,7 @@
     width: 10rem;
 
     text-align: center;
+    font-weight: 500;
     letter-spacing: .025rem;
     text-transform: capitalize;
 
