--- a/css/style.css
+++ b/css/style.css
@@ -326,6 +326,7 @@ section .section-title.active-item span {
   min-width: 9.5rem;
   width: 10rem;
   text-align: center;
+  font-weight: 500;
   letter-spacing: 0.025rem;
   text-transform: capitalize;
   position: relative;
@@ -1816,6 +1817,7 @@ form button:hover::after {
   font-size: 2.5rem;
   font-size: clamp(1.5rem, 4vw, 2.5rem);
   text-wrap: balance;
+  font-weight: 700;
 }
 @media (min-width: 820px) {
   .hero-grid .grid-title {
@@ -3204,6 +3206,146 @@ form button:hover::after {
 }
 .prox-section .item-3 {
   color: #b3c0cc;
+}
+
+/* LOADER SCREEN */
+.loader_bg {
+  position: fixed;
+  inset: 0;
+  background: #15191e;
+  text-align: center;
+  color: #f4f4f4;
+  display: grid;
+  place-items: center;
+  isolation: isolate;
+  z-index: 100;
+}
+
+.box {
+  width: 100%;
+  height: 4rem;
+  margin-inline: auto;
+  margin-bottom: 1rem;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.inbox {
+  border: 0.15rem solid transparent;
+  width: 25%;
+  height: 100%;
+  margin-inline: auto;
+  position: relative;
+}
+
+.inbox.inbox-1 {
+  border-width: 0.25rem;
+  border-top-color: #b3c0cc;
+  border-left-color: #b3c0cc;
+  border-bottom-color: #b3c0cc;
+  border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+  animation: box-1 1.25s ease forwards 1s;
+  opacity: 0;
+}
+
+.inbox.inbox-2 {
+  border-color: transparent;
+  border-top-color: #f4f4f4;
+  border-right-color: #f4f4f4;
+  border-bottom-color: #f4f4f4;
+  border-top-right-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  transform: translateX(0.25rem) translateY(-0.25rem);
+  animation: box-2 1.25s ease forwards 1.05s;
+  opacity: 0;
+}
+
+.loader_bg .title {
+  position: relative;
+}
+
+.loader_bg .title::after {
+  content: "";
+  position: absolute;
+  bottom: -1rem;
+  left: 0;
+  width: 100%;
+  height: 0.125rem;
+  background: linear-gradient(90deg, transparent, #b3c0cc, transparent);
+  animation: underline 2.5s ease forwards 1.25s;
+  opacity: 0;
+}
+
+.loader_bg .title h1 {
+  margin-bottom: 0.5rem;
+  color: #f4f4f4;
+  display: flex;
+  justify-content: center;
+  /* gap: 1rem; */
+  animation: title-h1 1.25s forwards 1.75s;
+  /* opacity: 0; */
+}
+
+.loader_bg .title h1 span {
+  color: #b3c0cc;
+}
+
+.loader_bg .title p {
+  text-transform: uppercase;
+  color: #b3c0cc;
+  letter-spacing: 0.25rem;
+  /* animation: title-p 1.25s forwards 2.25s; */
+  /* opacity: 0; */
+}
+
+/* @keyframes title-h1 {
+  0% {
+    opacity: 0;
+    gap: 1rem;
+  }
+
+  100% {
+    gap: 0;
+    opacity: 1;
+  }
+} */
+@keyframes title-p {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+    letter-spacing: normal;
+  }
+}
+@keyframes underline {
+  0% {
+    transform: scaleX(0);
+  }
+  100% {
+    transform: scaleX(1);
+    opacity: 1;
+  }
+}
+@keyframes box-1 {
+  0% {
+    transform: translateX(-0.5rem);
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes box-2 {
+  0% {
+    transform: translateX(0.5rem) translateY(-0.25rem);
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
