--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -339,6 +339,7 @@
             font-size: 2.5rem;
             font-size: clamp(1.5rem, 4vw, 2.5rem);
             text-wrap: balance;
+            font-weight: 700;
         }
 
         // WIDE SCREEN LAYOUT
