--- a/css/style.css
+++ b/css/style.css
@@ -1386,8 +1386,8 @@ form button:hover::after {
 #nav .logo p {
   color: #f4f4f4;
   font-weight: 500;
-  font-size: 0.95rem;
-  font-size: clamp(.975rem, 1.5vw, 1.05rem);
+  font-size: 0.75rem;
+  font-size: clamp(0.75rem, 1.25vw, 1rem);
   text-transform: capitalize;
   transition: 500ms;
 }
