--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -50,8 +50,8 @@
         p {
             color: abstracts.$text-light;
             font-weight: 500;
-            font-size: 0.95rem;
-            font-size: abstracts.$font-clamp-xsm;
+            font-size: 0.75rem;
+            font-size: clamp(0.75rem, 1.25vw, 1rem);
             text-transform: capitalize;
             transition: 500ms;
 
