--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -44,7 +44,7 @@
         border-radius: abstracts.$border-radius-sm;
         border: 1px solid abstracts.$brand-border;
         a {
-            padding: 0 .5rem;
+            padding: 0 0.25rem;
             display: block;
         }
         p {
