--- a/css/style.css
+++ b/css/style.css
@@ -1348,6 +1348,7 @@ form button:hover::after {
   left: 0;
   top: 0;
   width: 100%;
+  height: 7vh;
   isolation: isolate;
   transition: 0.25s;
   z-index: 10;
@@ -1411,7 +1412,9 @@ form button:hover::after {
   #nav .nav-list .links-container {
     position: absolute;
     top: 7vh;
+    top: 7vh;
     left: 100%;
+    left: 0;
     width: 100vw;
     height: 100vh;
     background-color: #15191e;
@@ -1420,14 +1423,13 @@ form button:hover::after {
     z-index: 5;
   }
   #nav .nav-list .links-container ul {
-    background: #1f252d;
-    margin: 2rem 5vw;
+    margin: 2rem 15vw 1rem 5vw;
     padding: 1rem 0.5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: start;
-    gap: 0.5rem;
+    gap: 0.75rem;
     border-radius: 0.25rem;
     transition: 0.5s ease left;
     position: relative;
@@ -1445,16 +1447,16 @@ form button:hover::after {
     opacity: 0;
   }
   #nav .nav-list .links-container ul li a {
-    padding-bottom: 0.25rem;
-    width: 70%;
-    display: block;
-    font-size: 1rem;
-    color: #b3c0cc;
-    text-transform: capitalize;
-    transition: 0.5s;
-    cursor: default;
     display: flex;
     align-items: center;
+    color: #b3c0cc;
+    width: 100%;
+    padding-bottom: 0.5rem;
+    font-size: 1rem;
+    font-weight: 500;
+    text-transform: capitalize;
+    transition: 500ms;
+    cursor: default;
   }
   #nav .nav-list .links-container ul li a::after {
     content: attr(data-after);
@@ -1472,6 +1474,7 @@ form button:hover::after {
     color: #b3c0cc;
     color: #f4f4f4;
     border-bottom: 1px solid #475462;
+    border-bottom: 1px solid rgba(179, 191, 203, 0.5);
   }
   #nav .nav-list .links-container ul li a.active .icon {
     opacity: 1;
@@ -1488,9 +1491,9 @@ form button:hover::after {
   }
   #nav .nav-list .links-container ul li .icon {
     border-radius: 0.25rem;
-    margin: 0 1rem 0 0.5rem;
+    margin: 0 1rem 0 0;
     position: relative;
-    opacity: 0.6;
+    opacity: 0.4;
   }
   #nav .nav-list .links-container ul li:hover a {
     color: #f4f4f4;
@@ -1505,7 +1508,7 @@ form button:hover::after {
   }
   #nav .nav-list .links-container .contact-links {
     background: #29323d;
-    margin: 0 5vw;
+    margin: 0 15vw 0 5vw;
     padding: 1rem;
     display: flex;
     flex-direction: column;
