--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,11 +1,13 @@
 @use '../abstracts';
 // WEBSITE HEADER
+$header-height: 7vh;
 // .HEADER = LOGO + NAV[DESKTOP LIST & MOBILE SIDEBAR]
 .header {
     position: fixed;
     left: 0;
     top: 0;
     width: 100%;
+    height: $header-height;
     isolation: isolate;
     transition: .25s;
     z-index: 10;
@@ -89,7 +91,9 @@
             @media (max-width: 820px) {
                 position: absolute;
                 top: 7vh;
+                top: $header-height;
                 left: 100%;
+                left: 0;
                 width: 100vw;
                 height: 100vh;
                 background-color: abstracts.$overlay-blue-darkest;
@@ -98,16 +102,16 @@
                 z-index: 5;
 
                 ul {
-                    background: abstracts.$overlay-blue-darker;
+                    // background: abstracts.$overlay-blue-darker;
 
-                    margin: 2rem 5vw;
+                    margin: 2rem 15vw 1rem 5vw;
                     padding: 1rem .5rem;
                     
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
                     align-items: start;
-                    gap: 0.5rem;
+                    gap: 0.75rem;
 
                     border-radius: abstracts.$border-radius-sm;
                     transition: 0.5s ease left;
@@ -126,28 +130,22 @@
                         // background: linear-gradient(90deg, abstracts.$overlay-blue-darkest 10%, transparent 15%);
                         transform: translateX(1.5rem);
                         opacity: 0;
-
+                        
                         // LINKS = SAME FONTS AS SECTION TITLES
                         a {
-                            // transform: translateX(1.5rem);
-                            // opacity: 0;
-                            // margin-right: auto;
-                            // padding: 0.5rem;
-                            padding-bottom: 0.25rem;
-
-                            width: 70%;
-                            display: block;
-                            font-size: 1rem;
-                            color: abstracts.$brand;
-                            // font-family: abstracts.$font-title;
-                            text-transform: capitalize;
-                            transition: .5s;
-                            cursor: default;
                             display: flex;
                             align-items: center;
-                            // border: 1px solid red;
-                        // background: linear-gradient(90deg, abstracts.$overlay-blue-darkest 10%, transparent 15%);
-                        // background: linear-gradient(90deg, #fff5 10%, red 15%);
+                            color: abstracts.$brand;
+
+                            width: 100%;
+                            padding-bottom: 0.5rem;
+
+                            font-size: 1rem;
+                            font-weight: 500;
+                            text-transform: capitalize;
+                            
+                            transition: 500ms;
+                            cursor: default;
 
                             // LINK HOVER EFFECT
                             &::after {
@@ -167,6 +165,7 @@
                                 color: abstracts.$brand;
                                 color: abstracts.$text-light;
                                 border-bottom: 1px solid abstracts.$overlay-blue-light;
+                                border-bottom: 1px solid abstracts.$brand-border;
                                 .icon {
                                     opacity: 1;
                                 }
@@ -186,9 +185,9 @@
 
                         .icon {
                             border-radius: 0.25rem;
-                            margin: 0 1rem 0 0.5rem;
+                            margin: 0 1rem 0 0;
                             position: relative;
-                            opacity: 0.6;
+                            opacity: 0.4;
                         }
 
 
@@ -217,7 +216,7 @@
                 // CONTACT LINKS
                 .contact-links {
                     background: abstracts.$overlay-blue-dark;
-                    margin: 0 5vw;
+                    margin: 0 15vw 0 5vw;
                     padding: 1rem;
 
                     display: flex;
