--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,6 +1,6 @@
 @use '../abstracts';
 // WEBSITE HEADER
-$header-height: 7vh;
+$header-height: 8vh;
 // .HEADER = LOGO + NAV[DESKTOP LIST & MOBILE SIDEBAR]
 .header {
     position: fixed;
@@ -35,7 +35,7 @@ $header-height: 7vh;
     justify-content: space-between;
     width: 100%;
     height: 100%;
-    padding: .5rem 5vw;
+    padding: 0.5rem 5vw;
     z-index: 5;
 
     // HEADER LOGO
