--- a/css/style.css
+++ b/css/style.css
@@ -1426,13 +1426,13 @@ form button:hover::after {
     left: 100%;
     width: 100vw;
     height: 100vh;
-    background-color: #15191e;
+    background-color: #0a0d0f;
     color: #f2f2f2;
     transition: 0.5s ease;
     z-index: 5;
   }
   #nav .nav-list .links-container ul {
-    margin: 2rem 15vw 1rem 5vw;
+    margin: 1rem 15vw 1rem 5vw;
     padding: 1rem 0.5rem;
     display: flex;
     flex-direction: column;
@@ -1459,6 +1459,7 @@ form button:hover::after {
     position: relative;
     display: flex;
     align-items: center;
+    gap: 0.5rem;
     color: #b3c0cc;
     width: 100%;
     padding-bottom: 0.5rem;
@@ -1501,7 +1502,6 @@ form button:hover::after {
   }
   #nav .nav-list .links-container ul li .icon {
     border-radius: 0.25rem;
-    margin: 0 1rem 0 0;
     position: relative;
     opacity: 0.4;
   }
@@ -1517,9 +1517,9 @@ form button:hover::after {
     color: #b3c0cc;
   }
   #nav .nav-list .links-container .contact-links {
-    background: #29323d;
+    background: #1f252d;
     margin: 0 15vw 0 5vw;
-    padding: 1rem;
+    padding: 1rem 0.5rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -1538,14 +1538,10 @@ form button:hover::after {
   #nav .nav-list .links-container .contact-links a span {
     height: 1rem;
     border-right: 1px solid #b3c0cc;
-  }
-  #nav .nav-list .links-container .contact-links a i {
-    margin-right: 0.25rem;
-    padding-right: 0.25rem;
-    border-right: 1px solid #b3c0cc;
+    transition: 250ms;
   }
   #nav .nav-list .links-container .contact-links a .icon {
-    opacity: 0.7;
+    opacity: 0.8;
   }
   #nav .nav-list .links-container .contact-links a:hover .icon {
     opacity: 1;
