--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -95,16 +95,15 @@ $header-height: 8vh;
                 left: 100%;
                 width: 100vw;
                 height: 100vh;
-                background-color: abstracts.$overlay-blue-darkest;
+                background-color: abstracts.$overlay-blue-black;
                 color: abstracts.$nav-links;
                 transition: .5s ease;
                 z-index: 5;
+                
 
                 ul {
-                    // background: abstracts.$overlay-blue-darker;
-
-                    margin: 2rem 15vw 1rem 5vw;
-                    padding: 1rem .5rem;
+                    margin: 1rem 15vw 1rem 5vw;
+                    padding: 1rem 0.5rem;
                     
                     display: flex;
                     flex-direction: column;
@@ -135,6 +134,7 @@ $header-height: 8vh;
                             position: relative;
                             display: flex;
                             align-items: center;
+                            gap: 0.5rem;
                             color: abstracts.$brand;
 
                             width: 100%;
@@ -185,7 +185,6 @@ $header-height: 8vh;
 
                         .icon {
                             border-radius: 0.25rem;
-                            margin: 0 1rem 0 0;
                             position: relative;
                             opacity: 0.4;
                         }
@@ -215,9 +214,9 @@ $header-height: 8vh;
 
                 // CONTACT LINKS
                 .contact-links {
-                    background: abstracts.$overlay-blue-dark;
+                    background: abstracts.$overlay-blue-darker;
                     margin: 0 15vw 0 5vw;
-                    padding: 1rem;
+                    padding: 1rem 0.5rem;
 
                     display: flex;
                     flex-direction: column;
@@ -238,16 +237,11 @@ $header-height: 8vh;
                         span {
                             height: 1rem;
                             border-right: 1px solid abstracts.$brand;
-                        }
-                        
-                        i {
-                            margin-right: .25rem;
-                            padding-right: .25rem;
-                            border-right: 1px solid abstracts.$brand;
+                            transition: 250ms;
                         }
 
                         .icon {
-                            opacity: 0.7;
+                            opacity: 0.8;
                         }
 
 
