--- a/sass/abstracts/_colors.scss
+++ b/sass/abstracts/_colors.scss
@@ -13,9 +13,10 @@ $text-light: #f4f4f4;
 $nav-links: hsl(0, 0%, 95%);
 
 // BRAND COLORS
-$brand: #b3c0cc;
+$brand: hsl(209, 20%, 75%);
 $brand-border: hsla(210, 19%, 75%, .5);
 $span-crimson: #dc143c;
+$crimson-border: #dc143c8c;
 $span-gold: #ead2a1;
 $span-light: hsl(210, 19%, 75%);
 $light-span: #fff9;
