--- a/sass/layout/_skills.scss
+++ b/sass/layout/_skills.scss
@@ -33,6 +33,8 @@
             .skills-article {
                 
                 p {
+                    // border: 2px solid red;
+                    
                     line-height: 1.8;
                     text-wrap: balance;
                     font-size: abstracts.$font-clamp-xsm;
@@ -46,6 +48,20 @@
                     }
                     @include abstracts.xlg {
                         max-width: 50%;
+                    }
+
+                    // DEPTH EFFECT
+                    &::after {
+                        content: '';
+                        position: absolute;
+                        inset: 0;
+                        left: 10%;
+                        width: 15rem;
+                        height: 15rem;
+                        background: radial-gradient(hsl(211, 16%, 95%) , #fff);
+                        filter: blur(30px);
+                        border-radius: 50%;
+                        z-index: -1;
                     }
 
                 }
