work item padding & skills p ::after

--- a/sass/layout/_skills.scss
+++ b/sass/layout/_skills.scss
@@ -56,9 +56,10 @@
                         position: absolute;
                         inset: 0;
                         left: 10%;
+                        top: 10%;
                         width: 15rem;
                         height: 15rem;
-                        background: radial-gradient(hsl(211, 16%, 92%) , #fff);
+                        background: radial-gradient(hsl(211, 16%, 94%) , #fff);
                         filter: blur(30px);
                         border-radius: 50%;
                         z-index: -1;
