--- a/css/style.css
+++ b/css/style.css
@@ -2135,9 +2135,10 @@ form button:hover::after {
   position: absolute;
   inset: 0;
   left: 10%;
+  top: 10%;
   width: 15rem;
   height: 15rem;
-  background: radial-gradient(#e7eaee, #fff);
+  background: radial-gradient(#edf0f2, #fff);
   filter: blur(30px);
   border-radius: 50%;
   z-index: -1;
@@ -2819,12 +2820,18 @@ form button:hover::after {
     opacity: 1;
   }
 }
+.work .work-container .item .item-content {
+  padding: 0.5rem;
+}
 @media (min-width: 820px) {
   .work .work-container .item .item-content {
     width: 50%;
+    padding: 2rem;
   }
 }
 .work .work-container .item .item-content .item-image {
+  border: 1px solid #475462;
+  border-radius: 0.25rem;
   overflow: hidden;
   width: 100%;
   height: 100%;
