--- a/sass/abstracts/_colors.scss
+++ b/sass/abstracts/_colors.scss
@@ -29,6 +29,10 @@ $border: #ead2a15e;
 $trans-border: rgba(255, 255, 255, 0.155);
 $dark-crimson:#b60f30;
 
+$brand-shadow: hsla(211, 16%, 33%, 0.35);
+// $brand-shadow: #dc143c8c;
+
+
 
 // GRADIENTS
 $overlay-60deg: linear-gradient(-60deg, #29323c 0%, #485563 100%);
