--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -326,11 +326,12 @@
                 }
 
                 .item-image {
-                    border: 1px solid abstracts.$overlay-blue-light;
+                    // border: 1px solid abstracts.$overlay-blue-light;
                     border-radius: 0.25rem;
                     overflow: hidden;
                     width: 100%;
                     height: 100%;
+                    box-shadow: 0 0.25rem 0.5rem abstracts.$brand-shadow;
                     img {
                         width: 100%;
                         height: 100%;
