--- a/css/style.css
+++ b/css/style.css
@@ -2147,27 +2147,64 @@ form button:hover::after {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  margin: 0 auto 1rem;
+  margin: 0 5vw 1rem;
+  padding-bottom: 1rem;
   border-radius: 0.25rem;
+  position: relative;
+  overflow: hidden;
 }
-@media (min-width: 768px) {
+@media (min-width: 576px) {
   .skills-section .skills-content .skills-intro .skills-icons {
     justify-content: flex-start;
     gap: 5vw;
+    margin: 0;
+    max-width: 400px;
   }
+}
+.skills-section .skills-content .skills-intro .skills-icons::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, #fff, #475462, #fff);
+  max-width: 350px;
+  border-radius: 2rem;
+  opacity: 0.45;
+  z-index: -1;
+  transform: translateX(-100%);
+  transition: 250ms;
+}
+@keyframes icons-line {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
+.skills-section .skills-content .skills-intro .skills-icons:hover::after {
+  opacity: 0.25;
 }
 .skills-section .skills-content .skills-intro .skills-icons svg {
   height: 5rem;
   width: auto;
   fill: #1f252d;
   transition: 0.25s;
-  filter: drop-shadow(0.25rem 0.25rem 0.25rem rgba(41, 50, 61, 0.25));
+  filter: drop-shadow(0.25rem 0.25rem 0.5rem rgba(41, 50, 61, 0.25));
+  cursor: pointer;
 }
 .skills-section .skills-content .skills-intro .skills-icons.io-item svg {
   transform: scale(0.8);
   transition: 1s;
 }
+.skills-section .skills-content .skills-intro .skills-icons.active-item::after {
+  animation: icons-line 2s infinite;
+  animation-delay: 1s;
+}
 .skills-section .skills-content .skills-intro .skills-icons.active-item svg {
+  animation: svg-img 1s infinite;
   transform: scale(1);
 }
 .skills-section .skills-content .skills-intro .skills-icons.active-item svg:nth-child(1) {
@@ -2178,6 +2215,10 @@ form button:hover::after {
 }
 .skills-section .skills-content .skills-intro .skills-icons.active-item svg:nth-child(3) {
   transition-delay: 0.45s;
+}
+.skills-section .skills-content .skills-intro .skills-icons.active-item svg:hover {
+  transform: scale(0.98);
+  transition: 250ms;
 }
 .skills-section .skills-content .skills-intro dialog {
   width: 100%;
