--- a/sass/abstracts/_colors.scss
+++ b/sass/abstracts/_colors.scss
@@ -31,6 +31,7 @@ $dark-crimson:#b60f30;
 
 $brand-shadow: hsla(211, 16%, 33%, 0.35);
 // $brand-shadow: #dc143c8c;
+$overlay-trans: hsla(212, 19%, 20%, 0.673);
 
 
 
