--- a/sass/components/_index.scss
+++ b/sass/components/_index.scss
@@ -1,5 +1,6 @@
 @forward './bottom-nav';
 @forward './buttons';
+@forward './dialog';
 @forward './form';
 @forward './menu-toggle';
 @forward './utilities';
