--- a/sass/components/_dialog.scss
+++ b/sass/components/_dialog.scss
@@ -2,11 +2,17 @@
 
 dialog {
     width: 100%;
-    height: 80vh;
-    margin: auto;
+    // max-width: 500px;
+    height: 60vh;
+    margin: auto 5vw;
     padding: 1rem;
     color: abstracts.$overlay-blue-light;
     border-radius: 0.25rem;
+    background: linear-gradient(-30deg, #ddd, #fff 60%);
+    
+    @include abstracts.sm {
+        max-width: 500px;
+    }
 
     &::backdrop {
         background: abstracts.$overlay-trans;
